Fixed circular include/import issue in SDO generator.