@@ -9,13 +9,11 @@
  ******************************************************************************/ 
 package org.eclipse.persistence.sdo.helper;
 
-import java.io.IOException;
-import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import javax.xml.transform.Source;
 import javax.xml.transform.stream.StreamSource;
 import org.eclipse.persistence.logging.AbstractSessionLog;
-import org.eclipse.persistence.logging.SessionLog;
 
 /**
  * <p><b>Purpose</b>: Default implementation of the org.eclipse.persistence.sdo.helper.SchemaResolver interface
@@ -34,27 +32,26 @@ public class DefaultSchemaResolver implements SchemaResolver {
     }
 
     /**
-       * Given the source schema and namespace and schemaLocation values from an import or include return the referenced Schema*
-       * @param sourceXSD The Source object of the source schema
-       * @param namespace The namespace portion of the import/include
-       * @param schemaLocation The schemaLocation portion of the import/include
-       * @return Source for the referenced Schema or null if processing the referenced schema should be skipped
-       */
+     * Given the source schema and namespace and schemaLocation values from an import
+     * or include return the referenced Schema.
+     * 
+     * @param sourceXSD The Source object of the source schema
+     * @param namespace The namespace portion of the import/include
+     * @param schemaLocation The schemaLocation portion of the import/include
+     * @return Source for the referenced Schema or null if processing the referenced
+     * schema should be skipped
+     */
     public Source resolveSchema(Source sourceXSD, String namespace, String schemaLocation) {
-        if ((schemaLocation == null) || schemaLocation.equals("")) {
-            AbstractSessionLog.getLog().log(SessionLog.WARNING, "sdo_missing_schemaLocation", new Object[] { namespace });
-            return null;
-        }
-
-        String baseLocation = getBaseSchemaLocation();
-        if (baseLocation != null) {
-            schemaLocation = baseLocation + schemaLocation;
-        }
         try {
-            URL url = new URL(schemaLocation);
-            InputStream is = url.openStream();
-            return new StreamSource(is);
-        } catch (IOException e) {        
+            URL schemaUrl = null;
+	        if (getBaseSchemaLocation() != null) {
+            	// Attempt to resolve the schema location against the base location
+                schemaUrl = new URI(getBaseSchemaLocation()).resolve(schemaLocation).toURL();
+	        } else {
+            	schemaUrl = new URL(schemaLocation);
+	        }
+	        return new StreamSource(schemaUrl.toExternalForm());
+        } catch (Exception e) {        
             AbstractSessionLog.getLog().log(AbstractSessionLog.WARNING, "sdo_error_processing_referenced_schema", new Object[] {e.getClass().getName(), namespace, schemaLocation });
             AbstractSessionLog.getLog().logThrowable(AbstractSessionLog.FINEST, e);
         }
@@ -63,7 +60,9 @@ public class DefaultSchemaResolver implements SchemaResolver {
 
     /**
     * Optional baseSchemaLocation can be specified
-    * If set this will be prepended to all schemaLocations passed into the resovleSchema methods
+    * If set, all schemaLocations passed into the resolveSchema methods will be resolved
+    * against this base location according to the java.net.URI API
+    * 
     * @param baseSchemaLocation optional baseSchemaLocation
     */
     public void setBaseSchemaLocation(String baseSchemaLocation) {
